@@ -1,5 +1,8 @@
 2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/x86_64/nptl/tls.h (THREAD_ATOMIC_CMPXCHG_VAL,
+	THREAD_ATOMIC_AND, THREAD_ATOMIC_BIT_SET): Remove macros.
+
 	* debug/tst-backtrace5.c (handle_signal): Check for syscall
 	instead of read.
 	(fn): Issue the read syscall instead of call the cancellable
